feat: F63 Skeleton Loaders + SWR Cache, F64 Multi-Project Support
F63 (frontend-only):
- Skeleton components (BoardSkeleton, GanttSkeleton, ProjectListSkeleton)
  with staggered pulse animation, aria-hidden, prefers-reduced-motion
- Stale-while-revalidate cache (useApiCache) for Board, Timeline, Projects
- Cached pages render instantly on revisit, refresh silently in background

F64:
- jira_projects DB table + CRUD API for managing active Jira projects
- Multi-project sync, board, search, data quality support
- Project filter in board FilterPanel
- Admin UI for project management in SettingsPage
- Per-project workflow config in WorkflowConfigPage

Also includes:
- .claude/ config (agents, commands, rules, skills, MCP)
- Monitoring: alertmanager, production docker-compose, alert rules
- QA reports and feature documentation

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>